# Jetson_Nano_TensorRT_Deployment

./: .gitignore  CMakeLists.txt  README.md  sim_inputs_outputs_100steps.csv
include/: communication.h  trt_inference.h  types.h
model/: model.onnx  model_fp32.onnx
scripts/: convert_to_onnx.py  convert_to_trt.py
src/: calibration_tool.cpp  communication.cpp  main.cpp  trt_inference.cpp
test/: gamepad_calibration.cpp  test_init_pose.cpp  test_motors.cpp  test_trt_engine.cpp  test_trt_engine_csv.cpp  test_udp.cpp
tools/: CMakeLists.txt  onnx_to_trt.cpp
